--- a/index.html
+++ b/index.html
@@ -2,15 +2,32 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
 	<title>Document</title>
+	<!-- 冀素丽
+	高级程序设计
+	网站工程学院
+	8：20 -->
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<h1>这是首页更新</h1>
-	<h2>这是bug修复</h2>
+<div class="wrap">
+<div class="main"></div>
+	<div class="dialog">
+		<header></header>
+		<div class="container">
+			<div class="login">
+				<dl>
+					<dt><img src="img/logo_01.png" alt=""></dt>
+					<dd>设备测试预约系统</dd>
+				</dl>
+				<p><img src="img/icon_01.png" alt=""><input type="text" placeholder="请输入手机号"></p>
+				<p><img src="img/icon_03.png" alt=""><input type="password" placeholder="请输入密码"></p>
+				<div class="btn">登录账号，开始预约</div>
+			</div>
+		</div>
 
-<script>
-
-
-</script>
+	</div>
+</div>
 </body>
 </html>
